// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component matches snapshot for failure state 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1ri905o"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-1a4ayes-MuiSvgIcon-root"
      data-testid="CancelIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
      />
    </svg>
    <p
      class="MuiTypography-root MuiTypography-body1 css-zp3nss-MuiTypography-root"
    >
      Kabin seciminiz tamamlanamadi.
    </p>
  </div>
</DocumentFragment>
`;

exports[`Message component matches snapshot for success state 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1ri905o"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-y0m7b1-MuiSvgIcon-root"
      data-testid="CheckCircleIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
      />
    </svg>
    <p
      class="MuiTypography-root MuiTypography-body1 css-zp3nss-MuiTypography-root"
    >
      Kabin seciminiz tamamlandi.
    </p>
  </div>
</DocumentFragment>
`;
